# fooddash_support

./: Agg_Answer.md  Caso_Tecnico_AI_Solutions_Expert.md  tickets.csv
prototipo/: .env.example  .gitignore  BITACORA_IA.md  README.md  pyproject.toml  run.py
prototipo/data/: golden.json  known_bugs.json  systems_catalog.json  tickets.json
prototipo/output/deepseek/: clasificacion.jsonl  cv_hybrid.json  cv_hybrid_report.md  cv_knn.json  cv_knn_report.md  cv_loocv.json  cv_loocv_report.md  eval.json  sistemas_fallando.md
prototipo/output/deepseek/respuestas/: TCK-1001.md  TCK-1003.md  TCK-1005.md  TCK-1007.md  TCK-1009.md  TCK-1010.md  TCK-1013.md  TCK-1015.md  TCK-1018.md  TCK-1020.md  TCK-1023.md  TCK-1025.md
prototipo/output/ollama-3b/: clasificacion.jsonl  eval.json  sistemas_fallando.md
prototipo/output/ollama-3b/respuestas/: TCK-1001.md  TCK-1003.md  TCK-1005.md  TCK-1007.md  TCK-1008.md  TCK-1009.md  TCK-1010.md  TCK-1012.md  TCK-1013.md  TCK-1014.md  TCK-1015.md  TCK-1018.md  TCK-1020.md  TCK-1023.md  TCK-1025.md
prototipo/src/fooddash/: __init__.py  agents.py  cv.py  embeddings.py  eval.py  known_bugs.py  llm.py  prompts.py
