[project]
name = "fooddash-triage"
version = "0.1.0"
description = "Agente de triaje de tickets para FoodDash (Caso Tecnico AI Solutions Expert - Healthatom)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fooddash"]

[tool.uv]
package = true
